# Vectorization

./: .gitignore  CMakeLists.txt  README.md  compiler_config.h  main.cpp
.github/workflows/: cmake_multi_platform.yml
